# iggy

./: .pre-commit-config.yaml  .typos.toml  Cargo.toml  Dockerfile  justfile  licenserc.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  notice.sh
.github/: changed-files-config.json  dependabot.yml
.github/config/: components.yml
.github/workflows/: _build_python_wheels.yml  _build_rust_artifacts.yml  _common.yml  _test.yml  _test_examples.yml  ci-check-go-sdk.yml  ci-check-pr.yml  ci-publish-go.yml  ci-test-bdd.yml  coverage-baseline.yml  edge-release.yml  post-dependabot.yml  post-merge.yml  publish.yml  publish_go_sdk.yml  stale-prs.yml
bdd/: README.md  docker-compose.cluster.yml  docker-compose.coverage.yml  docker-compose.server.yml  docker-compose.yml
bdd/cpp/: .bazelrc  BUILD.bazel  Dockerfile  Gemfile  MODULE.bazel
bdd/cpp/features/step_definitions/: background_steps.cpp  cucumber.wire  messaging_steps.cpp  raw_command_steps.cpp  world.hpp
bdd/cpp/scripts/: entrypoint.sh
bdd/go/: Dockerfile  go.mod  go.sum
bdd/go/tests/: basic_messaging.go  basic_messaging_test.go  helper.go  leader_redirection.go  raw_command.go  reconnection_auto_login.go  stream_topic_purge.go  suite_test.go
bdd/java/: build.gradle.kts  gradlew
bdd/network-chaos/: Dockerfile  server.py
bdd/node/: Dockerfile
bdd/php/: Dockerfile
bdd/php/tests/: BasicMessagingFeatureTest.php  RawCommandFeatureTest.php  SharedFeatureParser.php
bdd/python/: Dockerfile
bdd/python/tests/: conftest.py  test_raw_command.py
bdd/rust/: Cargo.toml  Dockerfile
bdd/rust/tests/: basic_messaging.rs  leader_redirection.rs  raw_command.rs  stream_topic_purge.rs  tcp_reconnection.rs
bdd/scenarios/: raw_command.feature  stream_topic_purge.feature  tcp_reconnection.feature
core/ai/mcp/: Cargo.toml  Dockerfile
core/binary_protocol/: Cargo.toml
core/binary_protocol/src/: lib.rs
core/cli/: Cargo.toml
core/cli/src/: credentials.rs  main.rs
core/common/: Cargo.toml
core/common/src/: consumer_group_client_state.rs  lib.rs  wire_conversions.rs
core/configs/: Cargo.toml
core/configs/src/: lib.rs
core/configs_derive/src/: config_env.rs
core/connectors/: README.md
core/connectors/runtime/: Cargo.toml  Dockerfile
core/connectors/sinks/: README.md
core/consensus/: Cargo.toml
core/consensus/src/: client_table.rs  impls.rs  metadata_helpers.rs  observability.rs  plane_helpers.rs  vsr_timeout.rs
core/cpu_allocation/: Cargo.toml
core/cpu_allocation/src/: allowed_cpus.rs  lib.rs
core/harness_derive/src/: codegen.rs
core/integration/: Cargo.toml
core/integration/tests/: mod.rs
core/journal/: Cargo.toml
core/journal/src/: prepare_journal.rs
core/message_bus/: Cargo.toml
core/message_bus/src/: lib.rs  socket_opts.rs
core/metadata/: Cargo.toml
core/partitions/: Cargo.toml
core/partitions/src/: iggy_index.rs  iggy_index_reader.rs  iggy_partition.rs  iggy_partitions.rs  journal.rs  lib.rs  offset_storage.rs  poll_plan.rs  types.rs
core/sdk/: Cargo.toml
core/sdk/src/: client_provider.rs  leader_aware.rs  lib.rs  prelude.rs  request_timeout.rs  session.rs  vsr.rs
core/server/: Cargo.toml  Dockerfile  config.toml
core/server-ng/: Cargo.toml  Dockerfile  config.toml  server.http
core/server-ng/src/: auth.rs  bootstrap.rs  cluster_meta.rs  consumer_group.rs  dispatch.rs  http.rs  lib.rs  main.rs  offset_recovery.rs  partition_helpers.rs  partition_reconciler.rs  pat.rs  responses.rs  segment_recovery.rs  server_error.rs  session_manager.rs  snapshot.rs  users.rs
core/server/src/: bootstrap.rs  lib.rs  main.rs  server_error.rs
core/server_common/: Cargo.toml
core/server_common/src/: consensus_message.rs  crypto.rs  indexes_mut.rs  lib.rs  send_messages2.rs
core/shard/src/: lib.rs  metrics.rs  router.rs
core/shard_allocator/: Cargo.toml  build.rs
core/shard_allocator/src/: lib.rs
core/simulator/: Cargo.toml
core/simulator/src/: bus.rs  client.rs  deps.rs  lib.rs  replica.rs
core/system_stats/: Cargo.toml
core/system_stats/src/: lib.rs
examples/go/: go.mod  go.sum
examples/java/: build.gradle.kts
examples/node/: package-lock.json  package.json
foreign/cpp/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
foreign/cpp/src/: client.rs  lib.rs  messages.rs  type_conversion.rs
foreign/cpp/tests/: bdd
foreign/csharp/: Directory.Packages.props
foreign/csharp/Iggy_SDK/: Iggy_SDK.csproj
foreign/csharp/Iggy_SDK.Tests.BDD/: Iggy_SDK.Tests.BDD.csproj
foreign/csharp/Iggy_SDK.Tests.Integration/: HeaderEncryptionIntegrationTests.cs  IggyTypedPublisherTests.cs  Iggy_SDK.Tests.Integration.csproj  MessageEncryptionIntegrationTests.cs  RawCommandTests.cs
foreign/csharp/Shared/: EncryptorTestExtensions.cs  Shared.csproj
foreign/go/: README.md  go.mod  go.sum
foreign/go/benchmarks/: send_messages_benchmark_test.go
foreign/go/binary_serialization/: binary_request_serializer.go  binary_response_deserializer.go  consumer_serializer.go  fetch_messages_request_serializer.go  fetch_messages_request_serializer_test.go  identifier_serializer_test.go  log_in_request_serializer.go  send_messages_request_serializer_test.go  update_stream_serializer_test.go  update_topic_serializer_test.go
foreign/go/cli/: cli.go
foreign/go/client/: client.go  iggy_client.go  leader_aware.go  leader_aware_test.go  state.go
foreign/go/contracts/: access_tokens.go  change_password.go  client.go  command.go  consumer_groups.go  create_stream.go  create_topic.go  create_user.go  delete_stream.go  delete_topic.go  delete_user.go  get_stats.go  get_stream.go  get_streams.go  get_topic.go  get_topics.go  get_user.go  get_users.go  (+22 more)
foreign/java/: gradle.properties  settings.gradle.kts
foreign/node/: eslint.config.mjs  package-lock.json  package.json
foreign/php/: Cargo.toml  Dockerfile.test  README.md  iggy-php.stubs.php
foreign/python/: Cargo.toml  apache_iggy.pyi  pyproject.toml
scripts/: bump-version.sh  run-bdd-tests.sh  run-go-examples-from-readme.sh
scripts/ci/: sync-rustc-version.sh
web/: package-lock.json  package.json
(+464 files in other folders)
