# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

module(
    name = "iggy_cpp_bdd",
)

bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "cucumber-cpp", version = "0.8.0.bcr.1")

# The Iggy C++ SDK lives in the sibling foreign/cpp Bazel module. Pull it in locally so the
# wire server links against the same cxx staticlib the SDK ships, without duplicating its
# build rules here.
bazel_dep(name = "iggy_cpp", version = "0.1.0")
local_path_override(
    module_name = "iggy_cpp",
    path = "../../foreign/cpp",
)
