# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "shard_allocator"
version = "0.1.0"
description = "CPU and NUMA shard allocation for the iggy server, backed by hwloc."
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
cpu_allocation = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_env = "musl"))'.dependencies]
hwlocality = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
hwlocality = { workspace = true, features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
